--- a/embedding.ipynb
+++ b/embedding.ipynb
@@ -75,7 +75,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n"
+    "os.environ[\"OPENAI_API_KEY\"] = \""\n"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "source": [
     "from langchain_openai import OpenAIEmbeddings\n",
     "\n",
-    "embeddings_model = OpenAIEmbeddings(openai_api_key=\"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\")"
+    "embeddings_model = OpenAIEmbeddings(openai_api_key=\"")"
    ]
   },
   {
