--- a/vector.ipynb
+++ b/vector.ipynb
@@ -117,7 +117,7 @@
     "import os\n",
     "import getpass\n",
     "\n",
-    "os.environ['OPENAI_API_KEY'] = \"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\""
+    "os.environ['OPENAI_API_KEY'] = \"..""#your API key
    ]
   },
   {
